2024-06-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha03: Bratislava';git push
	git tag -a 5.2.5-alpha03 -m '';git push --tags

	* ncremap: Splice MPAS-Atmosphere dimensions nIsoLevelsT,nIsoLevelsZ into default pdq_opt

	* ncremap: Add --pdq_opt synonym to --prm_opt

2024-05-07  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap: print ncvis command instead of ncview command

2024-04-19  Charlie Zender  <zender@uci.edu>

	* Change MRE from 2^(-NSB) to 2^-(NSB+1) to account for implicit MSB=1

	* NCO 5.2.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha02: Takumi Tonkatsu Ramen';git push
	git tag -a 5.2.5-alpha02 -m 'all: qnt_alg nm cf cv; qnt mre';git push --tags

	* Amend all docs to prefer --qnt over --ppc, mention --qnt_alg too

	* Add --qnt_alg to all numerical operators, and --qnt to those and ncremap/ncclimo as well

2024-04-18  Charlie Zender  <zender@uci.edu>

	* Add nco_qnt2baa() to support string-valued specification of NCO-implemented quantization algorithms

	* nco_qnt_mtd() add maximum relative error (MRE) to NSB methods

2024-04-17  Charlie Zender  <zender@uci.edu>

	* nco_qnt_mtd() use lowercase CF-ized algorithm names per draft CF convention, e.g., "granular_bitround" instead of "Granular BitRound"

2024-04-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha01: Krugerstraße';git push
	git tag -a 5.2.5-alpha01 -m 'Functionally identical to 5.2.4';git push --tags

	* Replace doe.jpg with doe.png (transparent background)

2024-04-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4: Kamehameha I';git push
	git tag -a 5.2.4 -m 'all: --qnt, NCO client nco_qnt_mtd(); ncclimo/ncremap: dbg; ncclimo: ncap2 cxl rgn_avg hst';git push --tags

2024-04-11  Charlie Zender  <zender@uci.edu>
